Added gif loader

--- a/Stylesheet.html
+++ b/Stylesheet.html
@@ -6,6 +6,10 @@ label {
   font-weight: bold;
 }
 
+.hidden {
+ display: none;
+}
+
 .branding-below {
   bottom: 54px;
   top: 0;
@@ -17,6 +21,7 @@ label {
 
 }
 
+  
 .pending{
   color:yellow;
 
@@ -26,6 +31,9 @@ label {
     text-align: center;
 }
 
+.width90 {
+  width:90%;
+}
 .top-header {
   border-color: #eee;
   border-width: 5px;
@@ -51,7 +59,7 @@ h1 {
 .width-100 {
   width: 100%;
   box-sizing: border-box;
-  -webkit-box-sizing : border-box;?
+  -webkit-box-sizing : border-box;‌
   -moz-box-sizing : border-box;
 }
 
