--- a/Stylesheet.html
+++ b/Stylesheet.html
@@ -9,6 +9,9 @@ label {
 .hidden {
  display: none;
 }
+.bold {
+  font-weight: bold;
+}
 
 .branding-below {
   bottom: 54px;
@@ -36,7 +39,7 @@ label {
 }
 .top-header {
   border-color: #eee;
-  border-width: 5px;
+  border-width: 1px;
   border-style: solid;
 
 }
@@ -66,5 +69,13 @@ h1 {
 #sidebar-button-bar,
 #dialog-button-bar {
   margin-bottom: 10px;
+}
+
+body {
+    display: block;
+    margin-top: 0px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    margin-left: 8px;
 }
 </style>
